tests/neg-custom-args/captures/read-only-use.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/read-only-use.scala:21:21 --------------------------------
21 |  val _: () -> Int = f // error
   |                     ^
   |                     Found:    (f : () ->{r.rd} Int)
   |                     Required: () -> Int
   |
   |                     Note that capability `r.rd` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/read-only-use.scala:26:21 --------------------------------
26 |  val _: () -> Int = g // error
   |                     ^
   |                     Found:    (g : () ->{r2.x.rd} Int)
   |                     Required: () -> Int
   |
   |                     Note that capability `r2.x.rd` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/read-only-use.scala:31:21 --------------------------------
31 |  val _: () -> Int = h // error
   |                     ^
   |                     Found:    (h : () ->{r3.xx.rd} Int)
   |                     Required: () -> Int
   |
   |                     Note that capability `r3.xx.rd` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
